--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ coverage
 dist
 dist-ssr
 *.local
+.env
 
 # Editor directories and files
 .vscode/*
@@ -24,3 +25,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# CDK
+cdk.out/
