--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint --ignore-path .gitignore --fix src",
-    "prettier": "prettier src --write"
+    "prettier": "prettier src --write",
+    "cdk:bootstrap": "npx cdk bootstrap",
+    "cdk:deploy": "npm run build && npx cdk deploy",
+    "cdk:destroy": "npx cdk destroy"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -19,7 +22,9 @@
     "@mui/material": "^5.8.7",
     "@mui/styles": "^5.8.7",
     "@types/yup": "^0.29.14",
+    "aws-cdk-lib": "^2.178.1",
     "axios": "^0.27.2",
+    "constructs": "^10.4.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
